--- a/src/stunnel.conf.j2
+++ b/src/stunnel.conf.j2
@@ -7,7 +7,8 @@ PSKsecrets = /etc/stunnel/stunnel.key
 securityLevel = 0
 debug = 7
 foreground = yes
-sslVersionMax = TLSv1.2
+#output = /dev/stdout
+#sslVersion = TLSv1.2
 
 {% for dst in dest_array %}
 ; PSK Client Configuration
@@ -15,6 +16,6 @@ sslVersionMax = TLSv1.2
 client = {{ client }}
 accept = {{ local_ports[loop.index0] }}
 connect = {{ dst.split(':')[0] }}:{{ dst.split(':')[1] }}
-ciphers = eNULL 
+ciphers = PSK-NULL-SHA256:eNULL 
 
 {% endfor %}
